fixed: overflow & sticky-top

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -1,6 +1,5 @@
 body {
   font-family: 'Noto Serif TC', serif;
-  overflow-x: hidden;
 }
 
 :root {
